# tinypipewire

./: LICENSE  README.md  meson.build  meson_options.txt
.github/scripts/: check-api-diff.sh
.github/workflows/: ci.yml
examples/: audio_capture.c  filter_event_port.c  filter_mix.c  filter_signal_port.c  meson.build  video_capture.c
include/tpw/: tpw_filter.h  tpw_log.h  tpw_stream.h
src/: meson.build  tpw_audio_format.c  tpw_buffer.c  tpw_filter.c  tpw_filter_event.c  tpw_filter_internal.h  tpw_filter_port.c  tpw_filter_process.c  tpw_log.c  tpw_log_internal.h  tpw_pw_core.c  tpw_pw_core_internal.h  tpw_spa_format.c  tpw_spa_format_internal.h  tpw_stream.c  tpw_stream_internal.h  tpw_video_format.c
tests/: meson.build  test_audio_format.c  test_error_notification.c  test_filter_error_notification.c  test_filter_event_port.c  test_filter_port_type.c  test_filter_ports.c  test_filter_process.c  test_filter_push_data.c  test_filter_signal_port.c  test_log.c  test_stream_lifecycle.c  test_stream_target.c  test_video_format.c  tpw_test.h
utils/: meson.build  tpw_record.c
