executable('audio_capture', 'audio_capture.c',
  dependencies: [tinypipewire_dep],
)

executable('video_capture', 'video_capture.c',
  dependencies: [tinypipewire_dep],
)

executable('filter_mix', 'filter_mix.c',
  dependencies: [tinypipewire_dep],
)

executable('filter_signal_port', 'filter_signal_port.c',
  dependencies: [tinypipewire_dep],
)

executable('filter_event_port', 'filter_event_port.c',
  dependencies: [tinypipewire_dep],
)
